--- a/CHANGES
+++ b/CHANGES
@@ -2,22 +2,6 @@
 Changes
 =======
 
-Changes in Version 8.1pl1
--------------------------
-
-* Extraneous '%' character was being added to internal lists of files to be
-  produced from generated C code and incorporated into the library. This
-  was causing failure of the make rules. The problem manifested when using
-  lex or yacc modules and option to incorporate generated code into the
-  library was being used.
-
-* Have yacc module add YACC_LDFLAGS to LDFLAGS if set. This can be need if
-  bison is being used and its library isn't in a standard location.
-
-* Have lex module add LEX_LDFLAGS to LDFLAGS if set. This can be need if
-  flex is being used and its library isn't in a standard location.
-
-
 Changes in Version 8.1
 ----------------------
 
@@ -37,3 +21,22 @@ Changes in Version 8.1
 * When specifying 'loadable_module' in PIC_OPTIONS and not also building a
   shared library, the 'pic' build directory wasn't being created on platform
   where normal object files aren't the same as position independent objects.
+
+* Extraneous '%' character was being added to internal lists of files to be
+  produced from generated C code and incorporated into the library. This
+  was causing failure of the make rules. The problem manifested when using
+  lex or yacc modules and option to incorporate generated code into the
+  library was being used.
+
+* Have yacc module add YACC_LDFLAGS to LDFLAGS if set. This can be need if
+  bison is being used and its library isn't in a standard location.
+
+* Have lex module add LEX_LDFLAGS to LDFLAGS if set. This can be need if
+  flex is being used and its library isn't in a standard location.
+
+* Fix issues with dependency generation when using yacc module which was
+  resulting in code always being recompiled even when it didn't need to be.
+
+* Move various pic variable definitions to global scope so that can be
+  reused in other modules that want to explicitly trigger shared library
+  or module creation.
